syntax = "proto3";

package admin;

import "errors/errors.proto";
option go_package = "./;errors";
enum Reason {
  // 设置缺省错误码
  option (errors.default_code) = 200;

  NotFound = 0[(errors.message)="数据不存在"];
  Database = 1[(errors.message)="数据库错误"];
  Metadata = 2[(errors.message)="元数据异常"];
  Transform = 3[(errors.message)="数据转换失败"];
  Data = 4[(errors.message)="数据错误"];
  ResourceService = 5[(errors.message)="资源服务异常"];
  GetAuthInfo = 6[(errors.message)="获取授权信息失败"];
  UnBind = 7[(errors.code)=401,(errors.message)="用户未绑定"];
  Bind = 8[(errors.code)=401,(errors.message)="用户未绑定"];
  Login = 9[(errors.message)="登录失败"];
  AlreadyBind = 10[(errors.message)="已存在绑定信息"];
  UsernameFormat = 11[(errors.message)="用户名格式错误"];
  Captcha = 12[(errors.message)="验证码错误"];
  UsernameNotExist = 13[(errors.message)="账户信息不存在"];
  SendEmailCaptcha = 14[(errors.message)="发送验证码失败"];
  RefreshToken = 15 [(errors.code)=401,(errors.message)="刷新token失败"];
  AuthInfo = 16[(errors.message)="授权信息错误"];
  UserCenter = 17[(errors.message)="用户中心连接失败"];
  Resource = 18[(errors.message)="资源中心连接失败"];

}


