syntax = "proto3";

package admin;

option go_package = "./v1;v1";

import "validate/validate.proto";


message LoginRequest {
  string code = 1[(validate.rules).string = {min_len:1}];
  string platform = 2[(validate.rules).string = {min_len: 1, max_len: 30}];
}

message LoginReply {
  string token = 1;
}

message BindRequest {
  string code = 1[(validate.rules).string = {min_len:1}];
  string platform = 2[(validate.rules).string = {min_len: 1, max_len: 30}];
  string username = 3[(validate.rules).string = {min_len: 1}];
  string captcha_id = 4[(validate.rules).string = {min_len:1}];
  string captcha = 5[(validate.rules).string = {min_len:1}];
}

message BindReply {
  string token = 1;
}

message SendBindEmailRequest {
  string email = 1[(validate.rules).string = {email:true}];
}

message SendBindEmailReply {
  string uuid = 1;
  string captcha = 2;
  uint32 expire = 3;
}

message RefreshTokenReply{
  string token = 1;
}