syntax = "proto3";

package admin;

option go_package = "./v1;v1";

import "validate/validate.proto";

message User{
  uint32 id = 1;
  string nickname = 2;
  string avatar = 3;
  string name = 4;
  string gender = 5;
  string phone = 6;
  string email = 7;
  uint32 last_login = 8;
  optional bool status = 9;
  uint32 created_at = 10;
  uint32 updated_at = 11;
}

message PageUserRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string name = 3;
  optional string phone = 4;
  optional string email = 5;
  optional bool status = 6;
  optional uint32 start_time = 7;
  optional uint32 end_time = 8;
}

message PageUserReply{
  uint32 total = 1;
  repeated User list = 2;
}

message AddUserRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  string gender = 2[(validate.rules).string = {min_len: 1}];
  string phone = 3[(validate.rules).string = {len:11}];
  string email = 4[(validate.rules).string = {email:true}];
}

message UpdateUserRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  string gender = 2[(validate.rules).string = {min_len: 1}];
  string phone = 3[(validate.rules).string = {len: 11}];
  string email = 4[(validate.rules).string = {email:true}];
  optional bool status = 5;
  uint32 id = 6[(validate.rules).uint32 = {gt: 0}];
}

message DeleteUserRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message ChangeUserStatusRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  bool status = 2;
}